# Room-for-Doubt-2.0

./: .gitignore  README.md  metrics.json  pyproject.toml  requirements.txt  stage1_log.txt
configs/: config.yaml
results/: stage2_final_distances.json
src/: __init__.py  dataset.py  evaluate_badness.py  evaluate_selective.py  evaluate_top2_correction.py  evaluate_tta.py  logging_utils.py  model.py  plot_tsne_trajectories.py  train.py  train_conditioned_head.py  train_meta.py  train_traj_head.py  visualize_cartography.py
tests/: test_pipeline.py
trajectories/: epoch_000_train_batch_0000.csv  epoch_000_train_batch_0001.csv  epoch_000_train_batch_0002.csv  epoch_000_train_batch_0003.csv  epoch_000_train_batch_0004.csv  epoch_000_train_batch_0005.csv  epoch_000_train_batch_0006.csv  epoch_000_train_batch_0007.csv  epoch_000_train_batch_0008.csv  epoch_000_train_batch_0009.csv  epoch_000_train_batch_0010.csv  epoch_000_train_batch_0011.csv  epoch_000_train_batch_0012.csv  epoch_000_train_batch_0013.csv  epoch_000_train_batch_0014.csv  epoch_000_train_batch_0015.csv  epoch_000_train_batch_0016.csv  epoch_000_train_batch_0017.csv  epoch_000_train_batch_0018.csv  epoch_000_train_batch_0019.csv  epoch_000_train_batch_0020.csv  epoch_000_train_batch_0021.csv  epoch_000_train_batch_0022.csv  epoch_000_train_batch_0023.csv  epoch_000_train_batch_0024.csv  epoch_000_train_batch_0025.csv  epoch_000_train_batch_0026.csv  epoch_000_train_batch_0027.csv  epoch_000_train_batch_0028.csv  epoch_000_train_batch_0029.csv  epoch_000_train_batch_0030.csv  epoch_000_train_batch_0031.csv  (+298 more)
(+10 files in other folders)
